force-app/main/default/objects/BackupAeronave__c/BackupAeronave__c.object-meta.xml
<CustomObject>
    <description>Objeto para mapear backup vinculado a indisponibilidade da aeronave.</description>
    <label>Backup Aeronave</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Código Backup Aeronave</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup de Aeronaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>