force-app/main/default/objects/BackupAeronave__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de pesquisa entre Backup de Aeronave e Aeronave.</description>
    <inlineHelpText>Campo de pesquisa entre Backup de Aeronave e Aeronave.</inlineHelpText>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Backup de Aeronaves</relationshipLabel>
    <relationshipName>BackupAeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>