force-app/main/default/objects/BackupAeronave__c/fields/Fim__c.field-meta.xml
<CustomField>
    <fullName>Fim__c</fullName>
    <description>Indica o fim do backup.</description>
    <inlineHelpText>Indica o fim do backup.</inlineHelpText>
    <label>Fim</label>
    <type>DateTime</type>
</CustomField>