force-app/main/default/objects/BackupAeronave__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Campo de Integração com o SIG.</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo de Integração com o SIG.</inlineHelpText>
    <label>Id Externo</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>