force-app/main/default/objects/BackupAeronave__c/fields/IndisponibilidadeAeronave__c.field-meta.xml
<CustomField>
    <fullName>IndisponibilidadeAeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de pesquisa entre Backup Aeronave e Indisponibilidade da Aeronave.</description>
    <inlineHelpText>Campo de pesquisa entre Backup Aeronave e Indisponibilidade da Aeronave.</inlineHelpText>
    <label>Indisponibilidade da Aeronave</label>
    <referenceTo>IndisponibilidadeAeronave__c</referenceTo>
    <relationshipLabel>Backup de Aeronaves</relationshipLabel>
    <relationshipName>BackupAeronaves</relationshipName>
    <type>Lookup</type>
</CustomField>