force-app/main/default/objects/BackupAeronave__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <description>Indica o inicio do backup.</description>
    <inlineHelpText>Indica o inicio do backup.</inlineHelpText>
    <label>Início</label>
    <type>DateTime</type>
</CustomField>